plugins {
  id 'java'
  id 'org.springframework.boot' version '3.4.5' apply false
  id 'io.spring.dependency-management' version '1.1.7' apply false
  id 'com.google.protobuf' version '0.9.4' apply false
}

allprojects {
  group = 'org.example'
  version = '1.0-SNAPSHOT'

  repositories {
    mavenCentral()
  }
}

subprojects {
  apply plugin: 'java'
  apply plugin: 'org.springframework.boot'
  apply plugin: 'io.spring.dependency-management'
  apply plugin: 'com.google.protobuf'

  java {
    toolchain {
      languageVersion = JavaLanguageVersion.of(17)
    }
  }

  dependencyManagement {
    imports {
      mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2024.0.0'
      mavenBom 'org.springframework.grpc:spring-grpc-dependencies:0.8.0'
    }
  }

  configurations {
    compileOnly {
      extendsFrom annotationProcessor
    }
  }

  dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    compileOnly 'org.projectlombok:lombok:1.18.38'
    annotationProcessor  'org.projectlombok:lombok:1.18.38'
    testCompileOnly  'org.projectlombok:lombok:1.18.38'
    testAnnotationProcessor  'org.projectlombok:lombok:1.18.38'
  }

  tasks.named('test') {
    useJUnitPlatform()
  }
}